static/manifests/base/grafana.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  labels:
    app: website-db-vault-kaf-redis-arg-kust-kyv-gra-loki-temp-pgui
    component: grafana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: website-db-vault-kaf-redis-arg-kust-kyv-gra-loki-temp-pgui
      component: grafana
  template:
    metadata:
      labels:
        app: website-db-vault-kaf-redis-arg-kust-kyv-gra-loki-temp-pgui
        component: grafana
    spec:
      containers:
      - name: grafana
        image: grafana/grafana:10.2.2
        ports:
        - containerPort: 3000
        volumeMounts:
          - name: grafana-datasource
            mountPath: /etc/grafana/provisioning/datasources
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "200m"
      volumes:
        - name: grafana-datasource
          configMap:
            name: grafana-datasource
---
apiVersion: v1
kind: Service
metadata:
  name: grafana-service
  labels:
    app: website-db-vault-kaf-redis-arg-kust-kyv-gra-loki-temp-pgui
    component: grafana
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
  selector:
    app: website-db-vault-kaf-redis-arg-kust-kyv-gra-loki-temp-pgui
    component: grafana
