static/manifests/base/loki.yaml
apiVersion: v1
kind: Service
metadata:
  name: loki
  labels:
    app: website-db-vault-kaf-redis-arg-kust-kyv-gra-loki-temp-pgui
    component: loki
spec:
  ports:
    - name: http
      port: 3100
      targetPort: 3100
  selector:
    app: website-db-vault-kaf-redis-arg-kust-kyv-gra-loki-temp-pgui
    component: loki
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: loki
  labels:
    app: website-db-vault-kaf-redis-arg-kust-kyv-gra-loki-temp-pgui
    component: loki
spec:
  serviceName: "loki"
  replicas: 1
  selector:
    matchLabels:
      app: website-db-vault-kaf-redis-arg-kust-kyv-gra-loki-temp-pgui
      component: loki
  template:
    metadata:
      labels:
        app: website-db-vault-kaf-redis-arg-kust-kyv-gra-loki-temp-pgui
        component: loki
    spec:
      containers:
      - name: loki
        image: grafana/loki:2.9.2
        args:
          - "-config.file=/etc/loki/loki.yaml"
        ports:
        - containerPort: 3100
          name: http
        volumeMounts:
        - name: config
          mountPath: /etc/loki
        - name: storage
          mountPath: /loki
        resources:
          requests:
            memory: "256Mi"
            cpu: "200m"
          limits:
            memory: "512Mi"
            cpu: "500m"
      volumes:
        - name: config
          configMap:
            name: loki-config
  volumeClaimTemplates:
  - metadata:
      name: storage
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 5Gi
